Fix layout scrollbar and StationDetails scroll-y

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -32,6 +32,7 @@ main {
   gap: 0.5em;
   grid-column: 2;
   height: $height-main;
+  overflow-y: auto;
 }
 
 .main-container {
